# SeQUeNCe_QSavory_comparison

./: .gitignore  .nojekyll  Project.toml  README.md  index.html  mkdocs.yml  simulator_cross_comparison_section.tex
0.1.0/: 404.html  index.html  objects.inv
docs/: configuration.md  index.md  outputs.md  running.md  simulator_mapping.md  testing.md
python/: pyproject.toml
python/src/sequence_qsavory_comparison/: __init__.py
python/src/sequence_qsavory_comparison/cli/: __init__.py  analyze_diagnostics.py  jobs.py  plot_compare.py  run_batch.py  run_diagnostic.py  run_diagnostic_campaign.py  run_sequence.py  run_sweep.py
python/src/sequence_qsavory_comparison/common/: __init__.py  config.py  diagnostics.py  models.py  outputs.py  plotting.py  validation.py
python/src/sequence_qsavory_comparison/sequence/: __init__.py  adapter.py  diagnostics.py  elementary.py  generation.py  imports.py  mapping.py  network.py  purification.py  results.py  simulation.py  swapping.py
python/tests/: test_batch_runner.py  test_common_config.py  test_diagnostics.py  test_jobs.py  test_models.py  test_plotting.py  test_project_layout.py  test_sequence_adapter.py  test_sequence_bds_protocols.py  test_sequence_elementary_slow.py  test_sequence_integration.py
scripts/: analyze_diagnostics.py  build_docs.py  generate_julia_api.jl  plot_compare.py  run_batch.py  run_diagnostic.py  run_diagnostic_campaign.py  run_qsavory.jl  run_qsavory_diagnostic.jl  run_sequence.py  run_sweep.py
src/: SeQUeNCeQSavoryComparison.jl
test/: Project.toml  runtests.jl
tests/: test_batch_runner.py  (+8 more)
(+67 files in other folders)
