[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-qsavory-comparison"
version = "0.1.0"
description = "Python tooling and SeQUeNCe adapter for the SeQUeNCe/QuantumSavory comparison."
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
